--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,9 @@
     "version": 2,
     "name": "music-album11",
     "builds": [
-       { "src": "src/app.js", "use": "@vercel/node" }
+       { "src": "src/App.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "src/app.js" }
+       { "src": "/(.*)", "dest": "src/App.js" }
     ]
  }
